test/Fail/Issue3403.err
Issue3403.agda:29.3-7: error: [SplitError.UnificationStuck]
I'm not sure if there should be a case for the constructor refl,
because I get stuck when trying to solve the following unification
problems (inferred index ≟ expected index):
  k x ≟ k y
when checking that the pattern refl has type k x ≡ k y
